package Serializer;
option optimize_for = LITE_RUNTIME;

message Vector2f{
	required float x=1;
	required float y=2;
}
message Vector2i{
	required int32 x=1;
	required int32 y=2;
}
message Vector3f{
	required float x=1;
	required float y=2;
	required float z=3;
}
message Vector3i{
	required int32 x=1;
	required int32 y=2;
	required int32 z=3;
}
message Vector4f{
	required float x=1;
	required float y=2;
	required float z=3;
	required float w=4;
}
message Vector4i{
	required int32 x=1;
	required int32 y=2;
	required int32 z=3;
	required int32 w=4;
}
message Matrix4f{
	repeated float data=1;
}
message Matrix4fB{
	optional bytes data=1;
}